syntax = "proto3";

import "common.proto";

package gatesvr;

option go_package = "mua/gatesvr/internal/pb";

enum CallbackType {
  SYNC = 0;
  ASYNC = 1;
  PUSH = 2;
}

message PushRequest {
  string player_id = 1;
  string ip = 2;
  CallbackType cb_type = 3;
  common.GameMessage message = 4;
}

message PushResponse {
  bool success = 1;
  string message = 2;
}

service GateSvr {
  // 踢下线
  rpc KickPlayer(KickPlayerRequest) returns (KickPlayerResponse);
  // 消息转发
  rpc ForwardMessage(ForwardMessageRequest) returns (ForwardMessageResponse);
  // 通知客户端
  rpc PushToClient(PushRequest) returns (PushResponse);
}

message KickPlayerRequest {
  string player_id = 1;
  string reason = 2;
}

message KickPlayerResponse {
  bool success = 1;
  string message = 2;
}

message ForwardMessageRequest {
  string player_id = 1;
  bytes payload = 2;
}

message ForwardMessageResponse {
  bool success = 1;
  string message = 2;
}

// Kafka消息
// 玩家上下线事件类型
enum PlayerStatusEventType {
  ONLINE = 0;  // 上线
  OFFLINE = 1; // 下线
}

// 玩家上下线事件消息
message PlayerStatusChanged {
  string player_id = 1;         // 玩家ID
  string ip = 2;                // 客户端IP地址
  PlayerStatusEventType event = 3; // 事件类型：上线/下线
  int64 event_time = 4;         // 事件时间（时间戳，单位秒或毫秒）
  string gatesvr_id = 5; // 接入服务的实例id
  string gatesvr_ip = 6; // 接入服务的ip地址
  string gatesvr_name = 7; // nacos服务名
  string gatesvr_addr = 8; // nacos注册中心地址rpc服务地址
} 